# pyusb-stubs

./: README.md  pyproject.toml
src/usb-stubs/: __init__.pyi  _debug.pyi  _interop.pyi  _lookup.pyi  _objfinalizer.pyi  _typing.pyi  control.pyi  core.pyi  legacy.pyi  libloader.pyi  util.pyi
src/usb-stubs/backend/: __init__.pyi  _typing.pyi  libusb0.pyi  libusb1.pyi  openusb.pyi
