[project]
name = "pyusb-stubs"
version = "1.3.1.20260528"
description = "Type stubs for pyusb"
authors = [
    {name = "dogtopus",email = "dogtopus@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
packages = [{include = "usb-stubs", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "mypy (>=2.1.0,<3.0.0)",
    "pyusb (>=1.3.1,<2.0.0)"
]
